# olapy

./: .agignore  .cruft.json  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylint.rc  .travis.yml  CHANGES.rst  MANIFEST.in  Makefile  README.rst  _setup.py  build_cython.sh  build_cython_install_from_scratch.sh  circle.yml  cython_setup.py  dev-requirements.txt  manage.py  noxfile.py  pyproject.toml  queries_examples  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql.yml  python-checks.yml  python-tests.yml
config/: olapy-config  olapy-config.xml  olapy-config.yml
cubes/: README.txt  cubes-config.xml
cubes/temp_cube/: Facts.csv  table0.csv  table1.csv  table2.csv
cubes_templates/: cubes-config.xml  cubes-config.yml  web_cube_config.xml  web_cube_config.yml  web_cube_config2.xml  web_cube_config2.yml  web_cube_config3.xml  web_cube_config3.yml
cubes_templates/foodmart_with_config/: Product.csv  Store.csv
demos/ETL/: config.yml  demo.py
demos/ETL/input_dir/: Geography.txt
demos/ETL2/: config.yml  demo.py  sales.xlsx
demos/ETL_OLD/: demo.py
demos/ETL_OLD/input_dir/: Product.txt  sales_facts.csv
demos/olapy-core/: demo.py
devel_utils/: make.sh  make_libfmt.sh
docs/: Makefile  adv_olapy_config.rst  api.rst  conf.py  cubes.rst  customize.rst  index.rst  installation.rst  make.bat  olapy_etl.rst  queries_examples  quick_start.rst  web.rst  whats_new_v0.7.md  working_with_db.rst
micro_bench/: __init__.py  bench_databases.py  bench_result2017-02-07-11-35 (old version)  bench_result2017-03-03-15-52  csv_olapy_bench_vs_other_olap_servers.py  cube_generator.py  micro_bench.py  mysql_sales_dump.sql  queries_4_db.py
micro_bench/db_config_files/: mssql_olapy-config  mssql_olapy-config.xml  mysql_olapy-config  mysql_olapy-config.xml  oracle_olapy-config  oracle_olapy-config.xml  postgres_olapy-config  postgres_olapy-config.xml
micro_bench/db_config_files/oracle_dump/: HR_TIME.sql
micro_bench/db_dumps/: mysql_sales_dump.sql  postgres_sales_dump.sql  sales.bak
micro_bench/db_dumps/oracle_dump/: HR_FACTS.sql  HR_GEOGRAPHY.sql  HR_PRODUCT.sql
micro_bench/olapy_pandas_VS_olapy_pyspark/: README.rst  benchmark.py  benchmark_tools.py  mdx_queries.py  requirements.txt
micro_bench/strings vs xmlwitch/xmlwitch/: bench_result2017-07-26-11-32  bench_result2017-07-26-11-34  bench_result2017-07-26-11-37
micro_bench/strings_vs_xmlwitch/master/: bench_result2017-07-26-11-29  bench_result2017-07-26-11-30  bench_result2017-07-26-11-31
micro_bench/strings_vs_xmlwitch/xmlwitch/: bench_result2017-07-26-11-33
notebooks/: Untitled.ipynb  xmla-session.ipynb
olapy/: __main__.py  cli.py  rest_services.py  test_parsing_queries.py
olapy/core/mdx/executor/: __init__.py  cube_loader.py  execute.py  (+10 more)
olapy/core/patch/: patch_olapy.py
olapy/core/services/: __init__.py  dict_discover_request_handler.py  dict_discover_tools.py  dict_execute_request_handler.py  dict_execute_tools.py  dict_xmla_discover_tools.py  logger.py  models.py  request_properties_models.py  xlma_execute_request_handler.py  xmla.py  xmla_discover_request_handler.py  xmla_discover_request_utils.py  xmla_discover_tools.py  xmla_discover_tools_utils.py  xmla_discover_xsds.py  xmla_execute_request_handler.py  xmla_execute_tools.py  xmla_execute_xsds.py  xmla_lib.py
olapy/etl/: _services.py  db_config  demo.py  demo_csv.py  demo_db.py  demo_files.py  etl.py  etl2.py  etl_OLD.py  sales_facts.txt  utils.py
olapy/etl/input_demos/: Geography.txt  sales_facts.txt
olapy/etl/input_dir/: postgres_demo_dump.sql  sales_facts.csv
olapy/patches/: create_xmla_lib+use_olapy_patch.patch  remove_spyne_regex_attrs.patch
olapy/web/: __init__.py  forms.py  logger.py  models.py  olapy.db  pivottable.py  stats_utils.py  views.py
olapy/web/templates/: 500.html  base.html  execute_query.html  form_macro.html  login.html  logs.html  pivottablejs.html  query_builder.html  stats.html
pyodide/: README.rst  server.py
pyodide/build_olapy_by_yourself/: README.rst  server.py
pyodide/build_olapy_by_yourself/under_build/: olapy.html
pyodide/demo/: README.rst  server.py
pyodide/demo/_build/: SQLAlchemy.js  atomicwrites.data  atomicwrites.js  attrs.data  attrs.js  cycler.data  cycler.js  kiwisolver.data  kiwisolver.js  matplotlib.js  more-itertools.data  more-itertools.js  nose.data  nose.js  numpy.js  olapy.data  olapy.html  olapy.js  packages.json  pandas.js  pluggy.data  pluggy.js  py.data  py.js  pyodide.asm.data.js  pyodide.asm.js  pyodide.js  pyodide_dev.js  pyparsing.data  pyparsing.js  pytest.data  pytest.js  python-dateutil.data  python-dateutil.js  pytz.data  pytz.js  setuptools.data  setuptools.js  test.js  xmlwitch.data  (+1 more)
pyodide/docs/: README.md
pyodide/under_build/: olapy.html
pyodide/under_packages/xmlwitch/: meta.yaml
src/olapy/: cli.py
src/olapy/core/: common.py  parse.py
src/olapy/cypxml/: __init__.pxd  __init__.py  cypxml.pxd  cypxml.pyx  test_cypxml.pyx  test_perf_big.pyx  test_perf_small.pyx  test_perf_very_big.pyx  test_xml_utils.pyx
src/olapy/demo_cubes_templates/: Requirements.txt  postgres_sales_db_dump.sql
src/olapy/etl/: etl.py  etl_conf.yml
src/olapy/pthread/: README.txt  pthreads.pxd
src/olapy/scheduler/: README.txt
src/olapy/stdlib/: format.pxd  string.pxd  xml_utils.pxd  xml_utils.pyx
tests/: conftest.py  data_test.csv  db_creation_utils.py  mysql_utils.py  postgres_utils.py  queries.py  sales_sqlite  sales_test  test_custom_cube.py  test_databases.py  test_execute_mdx.py  test_mdx_engine.py  test_memory_sqlite.py  test_mysql.py  test_parser.py  test_parsing_queries.py  test_posgtres.py  test_postgres.py  test_queries.py  test_separated_xmla_cell_data_responses.py  test_separated_xmla_slicers_responses.py  test_separated_xmla_xs0_responses.py  test_seperated_xmla_cell_data_responses.py  test_seperated_xmla_responses.py  test_seperated_xmla_slicers_responses.py  test_seperated_xmla_xs0_responses.py  test_single_file_cube.py  test_sqlite.py  test_xmla.py  test_xmla_lib.py  test_xmla_notox.py  test_xmla_responses.py  xs0_responses.py
(+107 files in other folders)
